--- a/feed/index.html
+++ b/feed/index.html
@@ -11,7 +11,7 @@
 	<title>Facilities Management &#8211; UAE &#8211; Middle East</title>
 	<atom:link href="https://alfajerfm.com/feed/" rel="self" type="application/rss+xml" />
 	<link>https://alfajerfm.com</link>
-	<description>Al Fajer Facilities Management</description>
+	<description>Meridian Prime Facilities Management Services LLC Facilities Management</description>
 	<lastBuildDate>Sun, 26 Jan 2020 08:55:59 +0000</lastBuildDate>
 	<language>en-GB</language>
 	<sy:updatePeriod>
@@ -20,7 +20,7 @@
 	1	</sy:updateFrequency>
 	<generator>https://wordpress.org/?v=6.0.9</generator>
 	<item>
-		<title>Al Fajer FM Features in 2019 FM Power 50 List</title>
+		<title>Meridian Prime Facilities Management Services LLC FM Features in 2019 FM Power 50 List</title>
 		<link>https://alfajerfm.com/al-fajer-fm-features-in-2019-fm-power-50-list/</link>
 		
 		<dc:creator><![CDATA[ZauqAdminAL]]></dc:creator>
@@ -29,22 +29,22 @@
 		<guid isPermaLink="false">https://alfajerfm.com/?p=10898</guid>
 
 					<description><![CDATA[<p>We are proud to share that we have been ranked 38th in the 2019 FM Power50 list released by Facilities Management Middle East, up from 43rd in 2018! Thank you F.M. M.E. team! And huge congratulations to our entire team of outstanding professionals for their committed</p>
-<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-features-in-2019-fm-power-50-list/">Al Fajer FM Features in 2019 FM Power 50 List</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
+<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-features-in-2019-fm-power-50-list/">Meridian Prime Facilities Management Services LLC FM Features in 2019 FM Power 50 List</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
 ]]></description>
-										<content:encoded><![CDATA[<p style="text-align: justify;">We are proud to share that we have been ranked 38<sup>th</sup> in the 2019 FM Power50 list released by Facilities Management Middle East, up from 43<sup>rd</sup> in 2018! Thank you F.M. M.E. team! And huge congratulations to our entire team of outstanding professionals for their committed efforts that have led to this recognition! Our thanks especially to our dynamic Deputy CEO, Sangeetha B., under whose able leadership Al Fajer FM continues to progress in pursuit of its core goals.</p>
+										<content:encoded><![CDATA[<p style="text-align: justify;">We are proud to share that we have been ranked 38<sup>th</sup> in the 2019 FM Power50 list released by Facilities Management Middle East, up from 43<sup>rd</sup> in 2018! Thank you F.M. M.E. team! And huge congratulations to our entire team of outstanding professionals for their committed efforts that have led to this recognition! Our thanks especially to our dynamic Deputy CEO, Sangeetha B., under whose able leadership Meridian Prime Facilities Management Services LLC FM continues to progress in pursuit of its core goals.</p>
 <p style="text-align: justify;">Excerpt from the article</p>
-<p style="text-align: justify;">&#8220;Al Fajer Facilities Management, founded by HH Sheikh Hasher Maktoum Bin Juma Al Maktoum, is a results-driven company committed to lead the regional FM industry. It is an Integrated Facilities Management company based in Dubai and Abu Dhabi.</p>
+<p style="text-align: justify;">&#8220;Meridian Prime Facilities Management Services LLC Facilities Management, founded by HH Sheikh Hasher Maktoum Bin Juma Al Maktoum, is a results-driven company committed to lead the regional FM industry. It is an Integrated Facilities Management company based in Dubai and Abu Dhabi.</p>
 <p style="text-align: justify;">The firm&#8217;s aim as an FM company is to ensure the integration of people, technology and systems to provide a reliable support system, and this principle is the pillar of its foundation. <br />
 The major projects the company is involved in over the next 12 months are Pointe Mall (cleaning project), Yas Water World/Warner Bros/Ferrari World (cleaning project), Meydan and District One (security), Engineer&#8217;s Office (MEP work), among others.</p>
 <p style="text-align: justify;">Sangeetha B, the deputy CEO, says that the biggest challenge facing the business over the next 12 months is providing the clients with energy-saving and sustainability initiatives at a reasonable price.&#8221;</p>
-<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-features-in-2019-fm-power-50-list/">Al Fajer FM Features in 2019 FM Power 50 List</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
+<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-features-in-2019-fm-power-50-list/">Meridian Prime Facilities Management Services LLC FM Features in 2019 FM Power 50 List</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
 ]]></content:encoded>
 					
 		
 		
 			</item>
 		<item>
-		<title>Al Fajer FM Receives ISO 41001 Certification</title>
+		<title>Meridian Prime Facilities Management Services LLC FM Receives ISO 41001 Certification</title>
 		<link>https://alfajerfm.com/al-fajer-fm-receives-iso-41001-certification/</link>
 		
 		<dc:creator><![CDATA[ZauqAdminAL]]></dc:creator>
@@ -52,15 +52,15 @@ The major projects the company is involved in over the next 12 months are Pointe
 				<category><![CDATA[News]]></category>
 		<guid isPermaLink="false">https://alfajerfm.com/?p=10895</guid>
 
-					<description><![CDATA[<p>Al Fajer FM completed its ISO 41001:2018 certification, the World’s First International Facilities Management System (FMS) in September 2019. The accreditation ensures international best practices are evident across each functional department. The audit was conducted by Das Certifications. Al Fajer FM has demonstrated its ability</p>
-<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-receives-iso-41001-certification/">Al Fajer FM Receives ISO 41001 Certification</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
+					<description><![CDATA[<p>Meridian Prime Facilities Management Services LLC FM completed its ISO 41001:2018 certification, the World’s First International Facilities Management System (FMS) in September 2019. The accreditation ensures international best practices are evident across each functional department. The audit was conducted by Das Certifications. Meridian Prime Facilities Management Services LLC FM has demonstrated its ability</p>
+<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-receives-iso-41001-certification/">Meridian Prime Facilities Management Services LLC FM Receives ISO 41001 Certification</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
 ]]></description>
-										<content:encoded><![CDATA[<p>Al Fajer FM completed its ISO 41001:2018 certification, the World’s First International Facilities Management System (FMS) in September 2019. The accreditation ensures international best practices are evident across each functional department.</p>
-<p>The audit was conducted by Das Certifications. Al Fajer FM has demonstrated its ability to deliver upon the standards with efficient processes, skilled people and a healthy operational model.</p>
-<p>Sangeetha, Dept. CEO, Al Fajer FM said: “Despite its ubiquitous nature, it has always been a challenge to quantify the quality and effectiveness of FM services.  The ISO 41000 will provide a standardised platform to assess and demonstrate the value that can be delivered by FM companies”<br />
+										<content:encoded><![CDATA[<p>Meridian Prime Facilities Management Services LLC FM completed its ISO 41001:2018 certification, the World’s First International Facilities Management System (FMS) in September 2019. The accreditation ensures international best practices are evident across each functional department.</p>
+<p>The audit was conducted by Das Certifications. Meridian Prime Facilities Management Services LLC FM has demonstrated its ability to deliver upon the standards with efficient processes, skilled people and a healthy operational model.</p>
+<p>Sangeetha, Dept. CEO, Meridian Prime Facilities Management Services LLC FM said: “Despite its ubiquitous nature, it has always been a challenge to quantify the quality and effectiveness of FM services.  The ISO 41000 will provide a standardised platform to assess and demonstrate the value that can be delivered by FM companies”<br />
  <br />
-In 2019, Al Fajer FM has also expanded its base to Abu Dhabi.  Al Fajer FM has maintained good performance in 2019 by adding contracts worth more than 50 Million AED. Al Fajer FM has a proven track record of delivering FM services in the region for the last 12 years with a focus on operational excellence, technology integration, client engagement, cost optimisation and innovation.</p>
-<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-receives-iso-41001-certification/">Al Fajer FM Receives ISO 41001 Certification</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
+In 2019, Meridian Prime Facilities Management Services LLC FM has also expanded its base to Abu Dhabi.  Meridian Prime Facilities Management Services LLC FM has maintained good performance in 2019 by adding contracts worth more than 50 Million AED. Meridian Prime Facilities Management Services LLC FM has a proven track record of delivering FM services in the region for the last 12 years with a focus on operational excellence, technology integration, client engagement, cost optimisation and innovation.</p>
+<p>The post <a rel="nofollow" href="https://alfajerfm.com/al-fajer-fm-receives-iso-41001-certification/">Meridian Prime Facilities Management Services LLC FM Receives ISO 41001 Certification</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
 ]]></content:encoded>
 					
 		
@@ -255,7 +255,7 @@ In 2019, Al Fajer FM has also expanded its base to Abu Dhabi.  Al Fajer FM has 
 <p>Whether we consider cleaning, renewable energy, automation, security, waste disposal, or virtually any other aspect of managing a facility, community scale deployment unlocks both best case performance, as well as savings in cost and consumption, at the same time.</p>
 <p><strong>The road ahead</strong></p>
 <p>I’ve always been of the opinion that the most substantial way in which a great idea can be empowered is by implementing it in the best possible manner.</p>
-<p>Several of our recent initiatives at Al Fajer have centered on bringing sustainable tech-enabled community management to market. With our fleet of energy efficient street cleaning trucks, we have been able to deploy a single solution that optimizes quality of life, hygiene and energy efficiency, at the same time. We have introduced cleaning systems that use much less water and need minimal chemicals, while still providing results that are superior to previous technologies. We are investigating the use of robotics for cleaning high-rise facades and expanding our capabilities to include many more innovative strategies, to help create the sustainable and green communities of the future. In recognition of this commitment, Al Fajer Facilities Management was awarded the ISO 41001:2018 accreditation in September 2019, the world’s first international Facilities Management System.</p>
+<p>Several of our recent initiatives at Meridian Prime Facilities Management Services LLC have centered on bringing sustainable tech-enabled community management to market. With our fleet of energy efficient street cleaning trucks, we have been able to deploy a single solution that optimizes quality of life, hygiene and energy efficiency, at the same time. We have introduced cleaning systems that use much less water and need minimal chemicals, while still providing results that are superior to previous technologies. We are investigating the use of robotics for cleaning high-rise facades and expanding our capabilities to include many more innovative strategies, to help create the sustainable and green communities of the future. In recognition of this commitment, Meridian Prime Facilities Management Services LLC Facilities Management was awarded the ISO 41001:2018 accreditation in September 2019, the world’s first international Facilities Management System.</p>
 <p>Creating a sustainable and eco-friendly society, with a high standard of living for all, is no longer inconceivable, and tech-enabled community management will be a key strategy, for humanity to achieve this goal.</p>
 <p>&nbsp;</p>
 <p></p><p>The post <a rel="nofollow" href="https://alfajerfm.com/sustainability-green-initiatives/">Sustainability &#038; Green Initiatives</a> appeared first on <a rel="nofollow" href="https://alfajerfm.com">Facilities Management - UAE - Middle East</a>.</p>
