--- a/textured-paints/index.html
+++ b/textured-paints/index.html
@@ -1028,8 +1028,7 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1530033894140">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">In 2016, Al
-																				Fajer Facilities Management extended the
+																			<p style="text-align: justify;">In 2016, Meridian Prime Facilities Management Services LLC Facilities Management extended the
 																				portfolio of our Engineering Division by
 																				creating a new discipline, namely
 																				Texturized Paints. This department has
