--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -1402,9 +1402,7 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Meridian Prime Facilities Management Services LLC FM, Street 24A,<br />
-																		Al Quoz Third Industrial Area,<br />
-																		122204, UAE, Dubai<br />
+																	<p>Flat No: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
 																		Email: Info@Meridianprimefm.com<br />
 																		Phone: +97142991801</p>
 																</div>
